--- a/package.json
+++ b/package.json
@@ -8,13 +8,13 @@
     "ejs": "^2.6.2",
     "express": "^4.17.1",
     "express-session": "^1.16.2",
-    "mongoose": "^5.6.10"
+    "mongoose": "^5.6.10",
+    "nodemailer": "^6.4.2"
   },
   "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
   },
-    "license": "ISC"
-  
+  "license": "ISC"
 }
